feat: add 1/2 adaptivity for mobile (365px)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/media.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -123,7 +124,7 @@
                         alt="button-arrow-icon" />
                     </div>
 
-                    <span class="link__description">Побробнее</span>
+                    <span class="link__description">Подробнее</span>
                   </a>
 
                   <div class="slider-block__controller controller">
@@ -141,7 +142,7 @@
                   class="card__img"
                   alt="slider-img-first" />
               </div>
-              <div class="card">
+              <!-- <div class="card">
                 <div class="card__wrapper">
                   <p class="card__exposition">Новое поступление</p>
                   <p class="card__title">Лучшие товары от компании Dell</p>
@@ -203,7 +204,7 @@
                   src="./assets/img/png/slider-img-first.png"
                   class="card__img"
                   alt="slider-img" />
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -211,11 +212,15 @@
             <a class="profitable-offer__wrapper">
               <img
                 src="./assets/img/png/dell-offer.png"
-                class="profitable-offer__img"
+                class="profitable-offer__img profitable-offer__img--one"
                 alt="backgraund-pc-img" />
-              <span class="profitable-offer__title">
+                <img
+                src="./assets/img/png/image 23.png"
+                class="profitable-offer__img profitable-offer__img--two"
+                alt="backgraund-pc-img" />
+              <p class="profitable-offer__title">
                 Выгодное предложение от Dell
-              </span>
+              </p>
               <img
                 src="./assets/img/svg/dell-offer-arrow.svg"
                 class="profitable-offer__arrow-icon"
@@ -246,7 +251,7 @@
             </a>
           </div>
 
-          <div class="card">
+          <div class="card card--first">
             <span class="card__number">01</span>
             <img
               src="./assets/img/png/catalog-1.png"
@@ -272,7 +277,7 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card card--second">
             <span class="card__number">03</span>
             <img
               src="./assets/img/png/catalog-3.png"
@@ -285,7 +290,7 @@
             </div>
           </div>
 
-          <div class="card card--brighter">
+          <div class="card card--brighter card--third">
             <span class="card__number">04</span>
             <img
               src="./assets/img/png/catalog-4.png"
@@ -298,7 +303,7 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card card--fourth">
             <span class="card__number">05</span>
             <img
               src="./assets/img/png/catalog-5.png"
