feat: almost end mobile-styles

--- a/index.html
+++ b/index.html
@@ -355,6 +355,10 @@
                 src="./assets/img/svg/background-vector.svg"
                 class="card__backgraund-img"
                 alt="card-background-element" />
+                <img
+                src="./assets/img/svg/mobile-backgraund-element.svg"
+                class="card__backgraund-img card__backgraund-img--mobile"
+                alt="card-background-element" />
               <div class="card__icon-wrapper">
                 <img
                   src="./assets/img/svg/benefits-card.svg"
@@ -381,6 +385,10 @@
                   src="./assets/img/svg/benefits-done.svg"
                   class="card__icon"
                   alt="done-icon" />
+                  <img
+                src="./assets/img/svg/mobile-backgraund-element.svg"
+                class="card__backgraund-img card__backgraund-img--mobile"
+                alt="card-background-element" />
               </div>
               <p class="card__title">Авторизованный сервисный центр DELL</p>
               <p class="card__description">
@@ -399,6 +407,10 @@
                   src="./assets/img/svg/benefits-experts.svg"
                   class="card__icon"
                   alt="experts-icon" />
+                  <img
+                src="./assets/img/svg/mobile-backgraund-element.svg"
+                class="card__backgraund-img card__backgraund-img--mobile"
+                alt="card-background-element" />
               </div>
               <p class="card__title">Высокий уровень технической экспертизы</p>
               <p class="card__description">
@@ -417,6 +429,10 @@
                   src="./assets/img/svg/benefits-box.svg"
                   class="card__icon"
                   alt="box-icon" />
+                  <img
+                src="./assets/img/svg/mobile-backgraund-element.svg"
+                class="card__backgraund-img card__backgraund-img--mobile"
+                alt="card-background-element" />
               </div>
               <p class="card__title">Официальный партнер DELL</p>
               <p class="card__description card__description--fourth">
@@ -450,7 +466,7 @@
           </div>
 
           <div class="news__cards">
-            <div class="card">
+            <div class="card ">
               <div class="card__date">
                 <span class="card__day">11</span>
                 <span class="card__month">июля</span>
@@ -475,17 +491,18 @@
                     <button class="card__button">
                       <img
                         src="./assets/img/svg/link-button-arrow.svg"
-                        alt="button-arrow-icon" />
+                        alt="button-arrow-icon" 
+                        class="card__icon"/>
                     </button>
                   </div>
                   <p class="card__description">
-                    Вы можете посмотреть ещё больше интересных
+                    Вы можете посмотреть ещё больше интересных новостей
                   </p>
                 </div>
               </div>
             </div>
 
-            <div class="card">
+            <div class="card card--nonmobile">
               <div class="card__date">
                 <span class="card__day">11</span>
                 <span class="card__month">июля</span>
@@ -515,13 +532,13 @@
                     </button>
                   </div>
                   <p class="card__description">
-                    Вы можете посмотреть ещё больше интересных
+                    Вы можете посмотреть ещё больше интересных новостей
                   </p>
                 </div>
               </div>
             </div>
 
-            <div class="card">
+            <div class="card card--nonmobile">
               <div class="card__date">
                 <span class="card__day">11</span>
                 <span class="card__month">июля</span>
@@ -551,7 +568,7 @@
                     </button>
                   </div>
                   <p class="card__description">
-                    Вы можете посмотреть ещё больше интересных
+                    Вы можете посмотреть ещё больше интересных новостей
                   </p>
                 </div>
               </div>
@@ -565,7 +582,7 @@
               <div class="card__wrapper">
                 <img
                   src="./assets/img/png/news-backgraund-4.png"
-                  class="card__backgraund-img"
+                  class="card__backgraund-img card__backgraund-img--first"
                   alt="card-backgraund" />
                 <img
                   src="./assets/img/svg/news-img-part1.svg"
@@ -586,7 +603,7 @@
                     </button>
                   </div>
                   <p class="card__description">
-                    Вы можете посмотреть ещё больше интересных
+                    Вы можете посмотреть ещё больше интересных новостей
                   </p>
                 </div>
               </div>
@@ -600,7 +617,7 @@
               <div class="card__wrapper">
                 <img
                   src="./assets/img/png/news-backgraund-5.png"
-                  class="card__backgraund-img"
+                  class="card__backgraund-img card__backgraund-img--second"
                   alt="card-backgraund" />
                 <img
                   src="./assets/img/svg/news-img-part1.svg"
@@ -621,13 +638,13 @@
                     </button>
                   </div>
                   <p class="card__description">
-                    Вы можете посмотреть ещё больше интересных
+                    Вы можете посмотреть ещё больше интересных новостей
                   </p>
                 </div>
               </div>
             </div>
 
-            <div class="card">
+            <div class="card card--nonmobile">
               <div class="card__date">
                 <span class="card__day">11</span>
                 <span class="card__month">июня</span>
@@ -655,7 +672,7 @@
                     </button>
                   </div>
                   <p class="card__description">
-                    Вы можете посмотреть ещё больше интересных
+                    Вы можете посмотреть ещё больше интересных новостей
                   </p>
                 </div>
               </div>
@@ -680,7 +697,7 @@
               <div class="contacts__header">
                 <p class="contacts__title">Наши контакты</p>
                 <p class="contacts__description">
-                  Dы можете связаться с нашим онлайн-консультантом
+                  Вы можете связаться c нашим онлайн-консультантом
                 </p>
               </div>
 
@@ -692,7 +709,7 @@
                       23.7270421,16.25z/data=!4m6!3m5!1s0x47210c0223630975:0x4d319ea41f64ae99!8m2!3d52.0996507!4d23.7636662!16zL20vMDE1anNt"
                       class="item__icon-wrapper item__icon-wrapper--location">
                       <img
-                        class="item__icon"
+                        class="item__icon item__icon--location"
                         src="./assets/img/svg/form-location-icon.svg"
                         alt="location-icon" />
                     </a>
@@ -709,7 +726,7 @@
                       href="mailto: markgorsharik@mail.com"
                       class="item__icon-wrapper">
                       <img
-                        class="item__icon item__icon-wrapper--mail"
+                        class="item__icon item__icon--mail"
                         src="./assets/img/svg/form-email-icon.svg"
                         alt="mail-icon" />
                     </a>
@@ -722,7 +739,7 @@
                   <div class="item__wrapper">
                     <a href="tel: +375336862774" class="item__icon-wrapper">
                       <img
-                        class="item__icon item__icon-wrapper--tel"
+                        class="item__icon item__icon--tel"
                         src="./assets/img/svg/form-tel-icon.svg"
                         alt="telephone-icon" />
                     </a>
@@ -815,9 +832,9 @@
                 class="footer__logo"
                 alt="footer-logo" />
             </a>
-            <div class="nav__list-wrapper">
-              <p class="nav__list-title nav__list-title--first">Каталог</p>
-              <ul class="nav__list">
+            <div class="nav__list-wrapper nav__list-wrapper--first">
+              <p class="nav__list-title">Каталог</p>
+              <ul class="nav__list nav__list--first">
                 <li class="nav__item">
                   <a href="" class="nav__link">Ноутбуки</a>
                 </li>
@@ -838,7 +855,7 @@
 
             <div class="nav__list-wrapper nav__list-wrapper--second">
               <p class="nav__list-title">Личный кабинет</p>
-              <ul class="nav__list nav__list--second">
+              <ul class="nav__list">
                 <li class="nav__item">
                   <a href="" class="nav__link">Профиль</a>
                 </li>
@@ -857,7 +874,7 @@
               </ul>
             </div>
 
-            <div class="nav__list-wrapper">
+            <div class="nav__list-wrapper nav__list-wrapper--third">
               <p class="nav__list-title nav__list-title--third">Помощь</p>
               <ul class="nav__list">
                 <li class="nav__item">
