fix: add alts and rewrite links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <ul class="nav-icons">
             <li class="nav-icons__item">
-              <a href="#" class="nav-icons__icon-wrapper">
+              <a href="#" class="nav-icons__icon-wrapper" alt="men-icon">
                 <img
                   src="./assets/img/svg/men-icon.svg"
                   class="nav-icons__icon nav-icons__icon--first" >
@@ -64,7 +64,7 @@
               <a href="#" class="nav-icons__icon-wrapper">
                 <img
                   src="./assets/img/svg/table-icon.svg"
-                  class="nav-icons__icon nav-icons__icon--second" >
+                  class="nav-icons__icon nav-icons__icon--second" alt="table-icon">
               </a>
             </li>
 
@@ -72,7 +72,7 @@
               <a href="#" class="nav-icons__icon-wrapper">
                 <img
                   src="./assets/img/png/heart-icon.png"
-                  class="nav-icons__icon nav-icons__icon--therd" >
+                  class="nav-icons__icon nav-icons__icon--therd" alt="heart-icon">
               </a>
             </li>
 
@@ -80,7 +80,7 @@
               <a href="#" class="nav-icons__icon-wrapper">
                 <img
                   src="./assets/img/svg/store-icon.svg"
-                  class="nav-icons__icon nav-icons__icon--fourth" >
+                  class="nav-icons__icon nav-icons__icon--fourth" alt="store-icon">
               </a>
               <div class="nav-icons__status-icon">
                 <span class="nav-icons__value">3</span>
@@ -287,7 +287,7 @@
                 class="profitable-offer__img profitable-offer__img--one"
                 alt="backgraund-pc-img" >
                 <img
-                src="./assets/img/png/image 23.png"
+                src="./assets/img/png/image-23.png"
                 class="profitable-offer__img profitable-offer__img--two"
                 alt="backgraund-pc-img" >
               <p class="profitable-offer__title">
@@ -777,8 +777,7 @@
                 <li class="contacts__item item">
                   <div class="item__wrapper">
                     <a
-                      href="https://www.google.com/maps/place/%D0%91%D1%80%D0%B5%D1%81%D1%82/@52.0774685,
-                      23.7270421,16.25z/data=!4m6!3m5!1s0x47210c0223630975:0x4d319ea41f64ae99!8m2!3d52.0996507!4d23.7636662!16zL20vMDE1anNt"
+                      href="https://www.google.com/maps/place/%D0%91%D1%80%D0%B5%D1%81%D1%82/@52.0774685,23.7270421,16.25z/data=!4m6!3m5!1s0x47210c0223630975:0x4d319ea41f64ae99!8m2!3d52.0996507!4d23.7636662!16zL20vMDE1anNt"
                       class="item__icon-wrapper item__icon-wrapper--location">
                       <img
                         class="item__icon item__icon--location"
@@ -826,8 +825,7 @@
               </ul>
               <div class="social">
                 <a
-                  href="https://www.facebook.com/MoldovaUSALinkSystem
-                  /photos/a.1255904651090910/5338404039507597/">
+                  href="https://www.facebook.com/MoldovaUSALinkSystem/photos/a.1255904651090910/5338404039507597/">
                   <img
                     class="social__icon"
                     src="./assets/img/svg/form-facebook-icon.svg"
@@ -876,16 +874,16 @@
                   <textarea
                     class="request__input request__input--comment"></textarea>
 
-                  <button class="link" form="request-form" id="submit-button">
-                    <div class="link__button">
+                  <div class="link" form="request-form" id="submit-button">
+                    <button class="link__button">
                       <img
                         src="./assets/img/svg/link-button-arrow.svg"
                         class="link__button-img"
                         alt="button-arrow-icon" >
-                    </div>
+                    </button>
 
                     <span class="link__description">Заказать</span>
-                  </button>
+                  </div>
                 </div>
               </form>
             </div>
@@ -978,7 +976,7 @@
 
               <li class="contact-us__item contact-us__item--second">
                 <p class="contact-us__title">Телефон</p>
-                <a href="tel:+7 495 737-06-01" class="contact-us__description">
+                <a href="tel:+74957370601" class="contact-us__description">
                   +7 495 737-06-01, +7 495 737-06-01
                 </a>
               </li>
