fix: chage div to button for form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="header">
       <div class="header__wrapper">
-        <img src="./assets/img/svg/logo.svg" class="logo" >
+        <img src="./assets/img/svg/logo.svg" class="logo" alt="main-logo" >
 
         <div class="header__nav-bar">
           <ul class="nav">
@@ -46,17 +46,17 @@
 
             <li class="nav__item nav__item--searh">
               <a href="#" class="nav__search">
-                <img class="nav__search-icon" src="./assets/img/svg/find-icon.svg" >
+                <img class="nav__search-icon" src="./assets/img/svg/find-icon.svg" alt="searh-icon">
               </a>
             </li>
           </ul>
 
           <ul class="nav-icons">
             <li class="nav-icons__item">
-              <a href="#" class="nav-icons__icon-wrapper" alt="men-icon">
+              <a href="#" class="nav-icons__icon-wrapper">
                 <img
                   src="./assets/img/svg/men-icon.svg"
-                  class="nav-icons__icon nav-icons__icon--first" >
+                  class="nav-icons__icon nav-icons__icon--first" alt="men-icon">
               </a>
             </li>
 
@@ -874,16 +874,16 @@
                   <textarea
                     class="request__input request__input--comment"></textarea>
 
-                  <div class="link" form="request-form" id="submit-button">
-                    <button class="link__button">
+                  <button class="link" form="request-form" id="submit-button">
+                    <div class="link__button">
                       <img
                         src="./assets/img/svg/link-button-arrow.svg"
                         class="link__button-img"
                         alt="button-arrow-icon" >
-                    </button>
+                    </div>
 
                     <span class="link__description">Заказать</span>
-                  </div>
+                  </button>
                 </div>
               </form>
             </div>
