fix: change div to span for subnite-button content

--- a/index.html
+++ b/index.html
@@ -875,12 +875,12 @@
                     class="request__input request__input--comment"></textarea>
 
                   <button class="link" form="request-form" id="submit-button">
-                    <div class="link__button">
+                    <span class="link__button">
                       <img
                         src="./assets/img/svg/link-button-arrow.svg"
                         class="link__button-img"
                         alt="button-arrow-icon" >
-                    </div>
+                    </span>
 
                     <span class="link__description">Заказать</span>
                   </button>
