--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="./styles/media.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com" >
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon-32x32.png">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap"
       rel="stylesheet" >
     <link
       href="https://fonts.cdnfonts.com/css/euclid-circular-a"
       rel="stylesheet" >
-    <title>Document</title>
+    <title>DELL Technologies</title>
   </head>
 
   <body>
